# qwen3-30b-swe-bench-multiturn-grpo

./: README.md  SKILL.md  pyproject.toml  requirements.txt
configs/: agent.yaml  agent_loop.yaml  grpo_swebench.yaml
scripts/: prepare_one.py  prepare_swebench_hf.py  run_grpo.sh  train_standalone.py  verl_entry.py
src/agentic_grpo/: __init__.py  agent_loop.py  config.py  env_wrapper.py  grpo.py  metrics.py  reward.py  rollout_backend.py  server_monitor.py  trajectory_adaptor.py
